# ros2_pcl_segmentation

./: .gitignore  README.md
docker/: Dockerfile  build.sh  run.sh
pcl_car_segmentation/: CMakeLists.txt  README.md
pcl_car_segmentation/config/: car_segmentation_config.rviz
pcl_car_segmentation/launch/: bring_kitti.launch.py  bring_rviz.launch.py
pcl_car_segmentation/model/: model_creation.ipynb
pcl_car_segmentation/src/: car_segmentation.cpp  car_segmentation_by_clusters.cpp  cloud_pre_processing.cpp
pcl_ground_segmentation/: CMakeLists.txt
pcl_ground_segmentation/config/: kitti_config.rviz
pcl_ground_segmentation/launch/: bring_kitti.launch.py  bring_rviz.launch.py
pcl_ground_segmentation/src/: ground_segmentation.cpp
pcl_human_segmentation/: CMakeLists.txt
